test nuovo tema, configurazione

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -8,6 +8,7 @@
     "themeNeutral": "Neutral",
     "themeModern": "Modern",
     "themeClassic": "Classic",
+    "themeMetro": "Metro",
     "shortcuts": "Shortcuts",
     "aboutEVT": "About EVT",
     "projectInfo": "Project Info",
