--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -7,6 +7,7 @@
   "themeNeutral": "Neutro",
   "themeModern": "Moderno",
   "themeClassic": "Classico",
+  "themeMetro": "Metro",
   "shortcuts": "Scorciatoie da tastiera",
   "aboutEVT": "Info su EVT",
   "projectInfo": "Informazioni progetto",
