Update with new branches

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -8,7 +8,6 @@
     "themeNeutral": "Neutral",
     "themeModern": "Modern",
     "themeClassic": "Classic",
-    "themeMetro": "Metro",
     "shortcuts": "Shortcuts",
     "aboutEVT": "About EVT",
     "projectInfo": "Project Info",
@@ -186,6 +185,8 @@
     "references": "References",
     "analogueIn": "Analogue in",
     "corresps": "Correspondences",
+    "addImage": "Add image",
+    "removeImage": "Remove image",
     "corrSeq": "Correction sequence",
     "criticalNote": "Critical note",
     "showsDeletions": "Show deletions",
