--- a/assets/i18n/it.json
+++ b/assets/i18n/it.json
@@ -7,7 +7,6 @@
   "themeNeutral": "Neutro",
   "themeModern": "Moderno",
   "themeClassic": "Classico",
-  "themeMetro": "Metro",
   "shortcuts": "Scorciatoie da tastiera",
   "aboutEVT": "Info su EVT",
   "projectInfo": "Informazioni progetto",
@@ -185,6 +184,8 @@
   "references": "Riferimenti",
   "analogueIn": "Passo parallelo in",
   "corresps": "Corrispondenze",
+  "addImage": "Aggiungi immagine",
+  "removeImage": "Rimuovi immagine",
   "corrSeq": "Sequenza correzioni",
   "criticalNote": "Nota critica",
   "showsDeletions": "Mostra cancellazioni",
